--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="UTF-8">
+
+<title>Smart Forum</title>
+
+<!-- FullCalendar -->
+<link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js"></script>
+
 <style>
 
 body{
@@ -86,15 +94,13 @@ padding:20px;
 box-shadow:0px 2px 6px rgba(0,0,0,0.1);
 }
 
-/* CALENDAR MOCK */
+/* REAL CALENDAR */
 
-.calendar{
+#calendar{
 height:300px;
 background:#EEE9DF;
 border-radius:8px;
-display:flex;
-align-items:center;
-justify-content:center;
+padding:10px;
 }
 
 /* MESSAGE BOARD */
@@ -128,7 +134,6 @@ color:#1B2632;
 <div class="menu-item">Roles</div>
 <div class="menu-item">Templates</div>
 <div class="menu-item">Emotional Check-in</div>
-
 </div>
 
 <!-- MAIN -->
@@ -136,17 +141,13 @@ color:#1B2632;
 <div class="main">
 
 <div class="topbar">
-
-<div class="mood">
-Set the mood today
-</div>
+<div class="mood">Set the mood today</div>
 
 <div class="emojis">
 <span>😀</span>
 <span>😐</span>
 <span>😞</span>
 </div>
-
 </div>
 
 <div class="content">
@@ -155,9 +156,7 @@ Set the mood today
 
 <div class="widget">
 <h3>Task Calendar</h3>
-<div class="calendar">
-Calendar Widget (Prototype)
-</div>
+<div id="calendar"></div>
 </div>
 
 <!-- MESSAGE BOARD -->
@@ -170,12 +169,30 @@ Calendar Widget (Prototype)
 <div class="message">Classmate: Can we meet tomorrow?</div>
 <div class="message">Teacher: Feedback uploaded.</div>
 </div>
-
 </div>
 
 </div>
-
 </div>
+
+<!-- CALENDAR SCRIPT -->
+
+<script>
+document.addEventListener('DOMContentLoaded', function () {
+  const calendarEl = document.getElementById('calendar');
+
+  const calendar = new FullCalendar.Calendar(calendarEl, {
+    initialView: 'dayGridMonth',
+    height: 280,
+    events: [
+      { title: 'Project Deadline', date: '2026-02-10' },
+      { title: 'Group Meeting', date: '2026-02-08' },
+      { title: 'Feedback Review', date: '2026-02-12' }
+    ]
+  });
+
+  calendar.render();
+});
+</script>
 
 </body>
 </html>
